package model;

public class Tabuleiro {
    private Peca[][] pecas;

    public Tabuleiro() {
        // TODO: constructor
    }

    public Peca getPeca(Posicao posicao) {
        // TODO: getPeca
        return null;
    }

    public void setPeca(Posicao posicao, Peca peca) {
        // TODO: setPeca
    }

    public boolean verificarMovimento(Posicao posicao, Peca peca) {
        // TODO: verificarMovimento
        return false;
    }

    public boolean verificarCaptura(Posicao posicao) {
        // TODO: verificarCaptura
        return false;
    }

    public boolean verificarVitoria(char cor) {
        // TODO: verificarVitoria
        return false;
    }
}
