package view;

public class JogoView {
    public void exibirMensagem(String texto) {
        // TODO: exibirMensagem
    }

    public String receberEntrada() {
        // TODO: receberEntrada
        return null;
    }
}
