@startuml Classes

skinparam ArrowFontStyle bold
skinparam PackageBorderColor #C0C0C0
skinparam DefaultFontSize 16

package model {
    class Tabuleiro {
        -pecas: Peca[][]

        +getPeca(posicao: Posicao): Peca
        +setPeca(posicao: Posicao, comum: Peca): void
        +verificarMovimento(posicao: Posicao, comum: Peca): boolean
        +verificarCaptura(posicao: Posicao): boolean
        +verificarVitoria(cor: char): boolean
    }

    class Posicao {
        -x: int
        -y: int
    }

    class Peca {
        -cor: char
        -isDama: boolean
        -posicao: Posicao

        +promoverParaDama(): void
    }

    class Jogo {
        -jogadorAtual: char
        -contadorMovimentos: int

        +iniciarTurno(): void
        +finalizarTurno(): void
        +verificarFimDeTurno(): boolean
        +verificarEmpate(): boolean
    }
}

package controller {
    class JogoController {
        -jogoModel: Jogo
        -jogoView: JogoView

        +receberMovimento(String entrada): String
        +proximoTurno(): void
        +jogar(): void
    }

    class TabuleiroController {
        +moverPeca(comum: Peca, destino: Posicao): void
        +exibirTabuleiro(): void
    }
}

package view {
    class TabuleiroView {
        +exibirCasas(tabuleiro: Tabuleiro) void
    }

    class JogoView {
        +exibirMensagem(texto: String): void
        +receberEntrada(): String
    }
}

model.Posicao "1..1" ---* "1..1" model.Peca
model.Peca "0..*" ---* "1..1" model.Tabuleiro
model.Posicao ...> model.Tabuleiro
model.Tabuleiro "1..1" --- "1..1" controller.TabuleiroController
model.Jogo "1..1" --- "1..1" controller.JogoController
controller.TabuleiroController "1..1" --- "1..1" view.TabuleiroView
controller.JogoController "1..1" --- "1..1" view.JogoView

@enduml
